# foo

./: .appveyor.yml  .travis.yml  CMakeLists.txt
ci/: travis-coverage.sh
include/: LogFormatter.hpp
include/foo/: Calculator.hpp  FileLogger.hpp
src/: FileLogger.cpp  LogFormatter.cpp
test/: CMakeLists.txt  Calculator_test.cpp
